fix alignment on big screen

--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -186,7 +186,7 @@ footer-section {
 			display: flex; 
 			justify-content: space-between; 
 			margin-top: 0;
-			padding: 2rem 2.5rem 0 3rem;
+			padding-top: 2rem;
 			flex-flow: column;
 			
 			.logo-cagov svg, .logo-census {
